k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: aurora
spec:
    replicas: 2
    selector:
        matchLabels:
            app: aurora # manage pods that have the label app: aurora
    strategy:
        type: RollingUpdate # replace pods one at a time
        rollingUpdate:
            maxUnavailable: 1 # only 1 pod can be down during update
            maxSurge: 2 # can temporarily run 2 extra pods while updating
    template:
        metadata:
            labels:
                app: aurora #  labels each pod with app: aurora so the selector can find them.
        spec:
            containers:
                - name: aurora
                  image: aurora:latest
                  imagePullPolicy: Never # use locally imported image
                  ports:
                      - containerPort: 2260
                  resources:
                      requests:
                          memory: "1Gi"
                          cpu: "500m"
                      limits:
                          memory: "2Gi"
                          cpu: "2000m"
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 2260
                      initialDelaySeconds: 30
                      periodSeconds: 15
                      timeoutSeconds: 10
                      failureThreshold: 5
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 2260
                      initialDelaySeconds: 15
                      periodSeconds: 10
                      timeoutSeconds: 10
