k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: aurora
spec:
    selector:
        app: aurora
    ports:
        - port: 2260
          targetPort: 2260
    type: LoadBalancer
